--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
       "react-app/jest"
     ]
   },
+  "engines": {
+    "node": "16.20.2"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
